frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: fe-namespace
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - port: 80         
      targetPort: 80   
      nodePort: 30080
