mongo-express-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
  namespace: mongo-express
spec:
  type: NodePort
  selector:
    app: mongo-express
  ports:
  - port: 8081
    targetPort: 8081
    nodePort: 30081
