networkpolicy-mongo-express.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-access-from-mongo-express
  namespace: mongo-db
spec:
  podSelector: {}  
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              access: mongo-express
      ports:
        - protocol: TCP
          port: 27017
